--- a/another.html
+++ b/another.html
@@ -385,9 +385,9 @@ html, * {-webkit-user-select:text!important; -moz-user-select:text!important;}
     </form>
   </div>
   <br>
-  <div class="box"> <a href="#"></a>
+  <div class="box"> <a href="http://naya2016.gitee.io/key/another.html"></a>
     <p><img class="icon" src="img/jiaowuxitong.png"></p>
-    <p class="url">啥也没有</p>
+    <p class="url">好看的</p>
   </div>
   <div class="box"> <a href="#"></a>
     <p><img class="icon" src="img/tieba.png"></p>
