--- a/another.html
+++ b/another.html
@@ -519,7 +519,7 @@ window.addEventListener('resize', move_input);
 </script> 
 <script type="text/javascript">
 //yellow
-function search(){if(document.getElementById("search_input").value != ""){window.location.href = "https://8oal3.xyz/sousuo/index.php?title=" + document.getElementById("search_input").value;document.getElementById("search_input").value = "";}return false;}</script> 
+function search(){if(document.getElementById("search_input").value != ""){window.location.href = "https://6m448.xyz/sousuo/index.php?title=" + document.getElementById("search_input").value;document.getElementById("search_input").value = "";}return false;}</script> 
 <script id="sakura_point_vsh" type="x-shader/x_vertex">
 uniform mat4 uProjection;
 uniform mat4 uModelview;
