--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ function get_suggest() {
 	}
 	var script = document.createElement('script');
 	script.type = 'text/javascript';
-	script.src = 'https://yandex.com/search/?text=' + encodeURIComponent(kw) + '&_=' + new Date().getTime() + '&callback=jsonp3';
+	script.src = 'http://sugs.m.sm.cn/web?t=w&uc_param_str=dnnwnt&scheme=http&fr=android&bid=1&q=' + encodeURIComponent(kw) + '&_=' + new Date().getTime() + '&callback=jsonp3';
 	var head = document.querySelector('head');
 	script.onload = function() {
       head.removeChild(script);
@@ -501,7 +501,7 @@ function clear_seach() {
 }
 function search(){if(document.getElementById("search_input").value != ""){
 //window.location.href = "http://baidu.com/s?ie=utf-8&rn=30&tn=baiduhome_pg&oq=%E5%BC%A0%E7%B1%BD%E6%B2%90&rsv_enter=0&wd=" + encodeURIComponent(document.getElementById("search_input").value);
-window.location.href = "http://m.sm.cn/s?q=" + encodeURIComponent(document.getElementById("search_input").value) + "&from=smor&safe=1&snum=1";
+window.location.href = "https://yandex.com/search/?text=" + encodeURIComponent(document.getElementById("search_input").value) + "&from=smor&safe=1&snum=1";
 document.getElementById("search_input").value = "";}return false;}
 
 document.getElementById('suglist').addEventListener('click', function(e) {
