--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ document.getElementById('suglist').addEventListener('click', function(e) {
 window.addEventListener('resize', move_input);
 </script> 
 <script type="text/javascript">
-function search(){if(document.getElementById("search_input").value != ""){window.location.href = "http://m.baidu.com/s?ie=utf-8&rn=30&tn=baiduhome_pg&oq=%E5%BC%A0%E7%B1%BD%E6%B2%90&rsv_enter=0&wd=" + document.getElementById("search_input").value;document.getElementById("search_input").value = "";}return false;}</script> 
+function search(){if(document.getElementById("search_input").value != ""){window.location.href = "https://yandex.com/search/?text=" + document.getElementById("search_input").value;document.getElementById("search_input").value = "";}return false;}</script> 
 <script id="sakura_point_vsh" type="x-shader/x_vertex">
 uniform mat4 uProjection;
 uniform mat4 uModelview;
